--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^6.0.0-0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.9",
     "web-vitals": "^2.1.4"
