--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "",
+      "src": "logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": ""
+      "type": "image/x-icon"
     },
     {
-      "src": "",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
